--- a/A.csproj
+++ b/A.csproj
@@ -95,11 +95,13 @@
     <Compile Include="Assets\ZSmartTile\Components\ZST_SnapToGrid.cs" />
     <Compile Include="Assets\camerafollow.cs" />
     <Compile Include="Assets\script\Door.cs" />
+    <Compile Include="Assets\script\FollowCamera.cs" />
     <Compile Include="Assets\script\GameManager.cs" />
     <Compile Include="Assets\script\Gravity.cs" />
     <Compile Include="Assets\script\GravitySwitch.cs" />
     <Compile Include="Assets\script\Moveplayer.cs" />
     <Compile Include="Assets\script\PlayManager.cs" />
+    <Compile Include="Assets\script\PlayerMove.cs" />
     <Compile Include="Assets\script\WallCreatorBlock.cs" />
     <Compile Include="Assets\script\active.cs" />
     <Compile Include="Assets\script\cloneparticle.cs" />
